tests/baselines/reference/privateNamesAndDecorators.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndDecorators.ts(4,5): error TS1206: Decorators are not valid here.
tests/cases/conformance/classes/members/privateNames/privateNamesAndDecorators.ts(6,5): error TS1206: Decorators are not valid here.


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndDecorators.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    class A {
        @dec
        ~
!!! error TS1206: Decorators are not valid here.
        #foo = 1;
        @dec
        ~
!!! error TS1206: Decorators are not valid here.
        #bar(): void { }
    }
    